--- a/app/src/main/res/layout/test_edit_text.xml
+++ b/app/src/main/res/layout/test_edit_text.xml
@@ -18,6 +18,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 app:counterEnabled="true"
+                android:visibility="gone"
                 app:counterMaxLength="20"
                 app:counterTextAppearance="?android:attr/textAppearanceLarge"
                 app:errorEnabled="true"
@@ -27,9 +28,11 @@
                 app:theme="@style/TextInputLayoutLineColor">
 
             <android.support.design.widget.TextInputEditText
+                    android:id="@+id/mac"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="请输入用户名"
+                    android:hint="请输入需要连接的MAC"
                     android:textColor="#333333"
                     android:textColorHint="#999999"
                     android:textSize="14dp" />
@@ -42,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 app:counterEnabled="true"
+                android:visibility="gone"
                 app:counterMaxLength="20"
                 app:counterTextAppearance="?android:attr/textAppearanceMedium"
                 app:errorEnabled="true"
@@ -55,9 +59,11 @@
                 app:theme="@style/TextInputLayoutLineColor">
 
             <android.support.design.widget.TextInputEditText
+                    android:id="@+id/uuid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="请输入用户名"
+                    android:hint="请输入UUID"
+                    android:visibility="gone"
                     android:inputType="textPassword"
                     android:textColor="#333333"
                     android:textColorHint="#999999"
@@ -68,25 +74,46 @@
 
         <Button
                 android:id="@+id/button3"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/selector"
                 android:text="写入数据" />
 
         <Button
                 android:layout_marginTop="20dp"
                 android:id="@+id/button"
-                android:layout_width="match_parent"
+                android:visibility="gone"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:text="重新扫描" />
 
         <Button
                 android:id="@+id/button2"
                 android:layout_marginTop="20dp"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="tv注册监听" />
 
+        <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
 
+
+        <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/animated_play_pause" />
+
+
+        <com.richpath.RichPathView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:vector="@drawable/vector_play" />
     </LinearLayout>
 
 </FrameLayout>
